# MediaConch_SourceCode

./: .appveyor.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  Config.md  History_CLI.txt  History_GUI.txt  LICENSE  License.html  README.md
.github/workflows/: MediaConch_Build_Lib.yml  MediaConch_Checks.yml  conanfile.txt
Documentation/: Config.md  Daemon.md  Plugins.md  REST.md
Project/: version.txt
Project/AppImage/: Recipe.sh
Project/Flatpak/: net.mediaarea.mediaconch-gui.json  net.mediaarea.mediaconch-server.json  net.mediaarea.mediaconch.json
Project/GNU/: PKGBUILD  mediaconch.dsc  mediaconch.spec
Project/GNU/CLI/: .gitignore  AddThisToRoot_CLI_compile.sh  Makefile.am  configure.ac
Project/GNU/CLI/test/: filename.sh  simple.sh  test_ffv1.sh  test_mk.sh  test_policy.sh  test_policy.txt  utils.sh
Project/GNU/Server/: .gitignore  AddThisToRoot_Server_compile.sh  Makefile.am  MediaConch.rc  configure.ac  mediaconchd.service
Project/MSVC2013/: MediaConch.sln
Project/MSVC2015/: MediaConch.sln  MediaConch_GUI.vcxproj  MediaConch_GUI.vcxproj.filters
Project/MSVC2017/: MediaConch.sln
Project/MSVC2019/: MediaConch.sln
Project/MSVC2022/: MediaConch.sln
Project/Mac/: BR_extension_CLI.sh  BR_extension_GUI.sh  BR_extension_Server.sh  BR_extension_daemon.sh  Info-ns.plist  Info.plist  Logo_White.icns  Make_MC_dmg.sh  Make_MC_xcarchive.sh  MediaConch.icns  Osascript_CLI.sh  build_CLI.sh  build_GUI.sh  mkdmg.sh  mkdmg_CLI  mkdmg_GUI  osascript_MediaConch_GUI.sh
Project/OBS/: deb7.dsc  deb9.dsc  obs_mediaconch
Project/Qt/: .gitignore  MediaConch.pro  MediaConch.rc  prepare
Qt_Licenses/: index.html  qtcore-attribution-doubleconversion.html  qtcore-attribution-easing.html  qtcore-attribution-forkfd.html  qtcore-attribution-freebsd.html  qtcore-attribution-md4.html  qtcore-attribution-md5.html  qtcore-attribution-pcre2.html  qtcore-attribution-qbig5codecs.html  qtcore-attribution-qbkcodec.html  qtcore-attribution-qeucjpcodec.html  qtcore-attribution-qeuckrcodec.html  qtcore-attribution-qeventdispatcher-cf.html  qtcore-attribution-qjiscodec.html  qtcore-attribution-qsjiscodec.html  qtcore-attribution-qtemporaryfile.html  qtcore-attribution-qtsciicodec.html  qtcore-attribution-rfc6234.html  qtcore-attribution-sha1.html  qtcore-attribution-sha3-endian.html  qtcore-attribution-sha3-keccak.html  qtcore-attribution-zlib.html  qtgui-attribution-android-native-style.html  qtgui-attribution-angle-arrayboundsclamper.html  qtgui-attribution-angle-murmurhash.html  qtgui-attribution-angle-systeminfo.html  qtgui-attribution-angle-trace-event.html  qtgui-attribution-angle.html  qtgui-attribution-cocoa-platform-plugin.html  qtgui-attribution-harfbuzz-ng.html  qtgui-attribution-harfbuzz.html  qtgui-attribution-iaccessible2.html  qtgui-attribution-libjpeg.html  qtgui-attribution-libpng.html  qtgui-attribution-opengl-es2-headers.html  qtgui-attribution-opengl-headers.html  qtgui-attribution-pixman.html  qtgui-attribution-smooth-scaling-algorithm.html  qtgui-attribution-wintab.html  qtgui-attribution-xcb.html  (+151 more)
Release/: Build_CLI_Windows.ps1  Build_DLL_Windows.ps1  Build_GUI_Windows.ps1  Build_Server_Windows.ps1  CleanUp.bat  ReadMe_CLI_Linux.txt  ReadMe_CLI_Mac.txt  ReadMe_CLI_Windows.txt  ReadMe_GUI_Linux.txt  ReadMe_GUI_Mac.txt  ReadMe_GUI_Windows.txt  Release_CLI_GNU.sub  Release_CLI_GNU_FromSource.sh  Release_CLI_GNU_Prepare.bat  Release_CLI_Linux_i386.sh  Release_CLI_Linux_x64.sh  Release_CLI_Mac_Intel.sh  Release_CLI_Mac_PPC.sh  Release_CLI_Mac_Universal.sh  Release_CLI_Windows.ps1  Release_CLI_Windows_i386.bat  Release_CLI_Windows_x64.bat  Release_DLL_Windows.ps1  Release_GNU_GNU.sh  Release_GUI_GNU.sub  Release_GUI_GNU_FromSource.sh  Release_GUI_GNU_Prepare.bat  Release_GUI_Linux_i386.sh  Release_GUI_Linux_x64.sh  Release_GUI_Mac_Intel.sh  Release_GUI_Mac_PPC.sh  Release_GUI_Mac_Universal.sh  Release_GUI_Windows.bat  Release_GUI_Windows.ps1  Release_GUI_Windows_i386.bat  Release_GUI_Windows_x64.bat  Release_Server_Windows.ps1  Release_Server_Windows_i386.bat  Release_Server_Windows_x64.bat  Release_Source.bat
Source/: CMakeLists.txt
Source/CLI/: .gitignore  CLI.cpp  CLI.h  CLI_Main.cpp  CommandLine_Parser.cpp  CommandLine_Parser.h  Config.h  Help.cpp  Help.h
Source/Checker/: Checker.cpp  Checker.h  Makefile.emscripten  Path.cpp  Path.h
Source/Common/: Configuration.cpp  Configuration.h  Container.h  Core.cpp  Core.h  DaemonClient.cpp  DaemonClient.h  Database.cpp  Database.h  DatabaseReport.cpp  DatabaseReport.h  DatabaseUi.cpp  DatabaseUi.h  DpfManager.cpp  DpfManager.h  FFmpeg.cpp  FFmpeg.h  FileRegistered.h  GeneratedCSVVideos.hpp  Http.cpp  Http.h  Httpd.cpp  Httpd.h  IMSC1.cpp  IMSC1.h  ImplementationReportDisplayHtmlXsl.h  ImplementationReportDisplayTextUnicodeXsl.h  ImplementationReportDisplayTextXsl.h  ImplementationReportDisplayXsl.h  ImplementationReportMatroskaSchema.h  ImplementationReportXsl.h  JS_Tree.cpp  JS_Tree.h  Json.cpp  Json.h  LibEventHttp.cpp  LibEventHttp.h  LibEventHttpd.cpp  LibEventHttpd.h  MediaConchLib.cpp  (+59 more)
Source/Daemon/: Config.h  Daemon.cpp  Daemon.h  Daemon_Main.cpp  Daemon_Main.h  Help.cpp  Help.h
Source/Example/: Example.xml  HowToUse_Dll.py
Source/IMSC1/: IMSC1Plugin.cpp  IMSC1Plugin.h  Makefile.emscripten
Source/Install/: MediaConch_Extensions.nsh  MediaConch_GUI_Windows.nsi
Source/Lib/: CMakeLists.txt  Lib.cpp  Lib.h  MediaConchDLL.cpp  MediaConchDLL.h  MediaConchLib.py
Source/Resource/: Resources.qrc
Tools/Implementation/: ImplementationReport.xsl
Tools/Policies/: README.md  policyset2policytransform2policyresult.xsl  sample_policy_1.xml  sample_policy_2_comparison.xml  sample_policy_3_comparison.xml  sample_policy_4_mkv_ffv1_digitization.xml  sample_policy_5_matroska_practices.xml  sample_policy_6_cavpp_preservation.xml  sample_policy_7_memoriav_recommendations.xml  sample_policy_8_TN2162.xml
Tools/Transforms/: dpfmanager2mediaconch.xsl  verapdf2mediaconch.xsl
debian/: changelog  control  copyright  mediaconch-gui.dirs  mediaconch-gui.install  mediaconch.dirs  mediaconch.pod  mediaconchd.install  rules  watch
(+310 files in other folders)
